--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -23,6 +23,13 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.24.2</version> <!-- Kontrollera versionen och ändra vid behov -->
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.jooby</groupId>
       <artifactId>jooby-netty</artifactId>
     </dependency>
