--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,7 +25,14 @@
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>3.24.2</version> <!-- Kontrollera versionen och ändra vid behov -->
+      <version>3.26.3</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+      <version>5.8.1</version>
       <scope>test</scope>
     </dependency>
 
